Add peerDeps. Add linkStyles for header. Add Formidable brand mark.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "formidable-oss-badges": "^0.3.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
@@ -40,5 +41,9 @@
     "@storybook/addons": "^5.3.19",
     "@storybook/preset-create-react-app": "^3.1.2",
     "@storybook/react": "^5.3.19"
+  },
+  "peerDependencies": {
+    "react-static": "^7.2.3",
+    "react-router-dom": "^5.2.0"
   }
 }
