WIP Style Header for Mobile. Add Copy to Clipboard

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "formidable-oss-badges": "^0.3.5",
     "react": "^16.13.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1"
@@ -43,7 +44,7 @@
     "@storybook/react": "^5.3.19"
   },
   "peerDependencies": {
-    "react-static": "^7.2.3",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "react-static": "^7.2.3"
   }
 }
