--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
+    "react-live": "^2.2.2",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1"
   },
