--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "format": "yarn run lint --fix",
+    "lint": "eslint 'src/**/*.js'"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,7 +44,14 @@
     "@storybook/addon-links": "^5.3.19",
     "@storybook/addons": "^5.3.19",
     "@storybook/preset-create-react-app": "^3.1.2",
-    "@storybook/react": "^5.3.19"
+    "@storybook/react": "^5.3.19",
+    "eslint-config-formidable": "^4.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-react-tools": "^1.1.7",
+    "eslint-plugin-filenames": "^1.3.2",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-promise": "^4.2.1",
+    "prettier": "^2.0.5"
   },
   "peerDependencies": {
     "react-router-dom": "^5.2.0",
