--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,21 @@
   ],
   "plugins": ["prettier", "react-hooks"],
   "rules": {
-    "prettier/prettier": ["error"]
+    "prettier/prettier": ["error"],
+    "quotes": [
+      "error",
+      "single",
+      {
+        "allowTemplateLiterals": true
+      }
+    ],
+    "no-console": "error",
+    "no-unused-vars": [
+      "error",
+      {
+        "ignoreRestSiblings": true
+      }
+    ],
+    "no-undef": "error"
   }
 }
