--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "styled-components": "^5.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "yarn run storybook",
+    "demo": "cd ./demo && yarn start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
