--- a/.npmignore
+++ b/.npmignore
@@ -1,5 +1,6 @@
-src/**/*.test.js
-lib/**/*.test.js
-src/examples/**
-lib/examples/**
-examples/**
+*
+!/dist/formidable-oss-landers*.js
+!/docs/**/*
+!LICENSE
+!README.md
+!package.json
