Update build process

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,10 @@ node_modules
 /coverage
 
 # production
-/build
+/dist
+/lib
+/es
+/docs/dist
 
 # misc
 .DS_Store
@@ -21,5 +24,3 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-dist
