--- a/.babelrc
+++ b/.babelrc
@@ -10,5 +10,10 @@
       }
     ],
     "@babel/preset-react"
-  ]
+  ],
+  "env": {
+    "cjs": {
+      "presets": ["@babel/preset-env", "@babel/preset-react"]
+    }
+  }
 }
