--- a/.eslintrc
+++ b/.eslintrc
@@ -1,27 +1,40 @@
 {
-  "extends": [
-    "react-app",
-    "prettier",
-    "prettier/react",
-    "plugin:react/recommended"
-  ],
-  "plugins": ["prettier"],
+  "root": true,
+  "parser": "babel-eslint",
+  "extends": ["prettier", "prettier/react", "plugin:react/recommended"],
+  "plugins": ["prettier", "react-hooks"],
+  "env": {
+    "browser": true,
+    "commonjs": true,
+    "es6": true,
+    "node": true,
+    "jest": true
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
+  "globals": {
+    "expect": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true,
+      "generators": true,
+      "experimentalObjectRestSpread": true
+    }
+  },
   "rules": {
     "prettier/prettier": ["error"],
     "quotes": [
       "error",
-      "double",
+      "single",
       {
         "allowTemplateLiterals": true
       }
-    ],
-    "no-console": "error",
-    "no-unused-vars": [
-      "error",
-      {
-        "ignoreRestSiblings": true
-      }
-    ],
-    "no-undef": "error"
+    ]
   }
 }
