--- a/package.json
+++ b/package.json
@@ -17,7 +17,15 @@
     "@rollup/plugin-babel": "^5.2.0",
     "@rollup/plugin-commonjs": "^15.0.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
+    "babel-eslint": "^10.1.0",
     "builder": "^5.0.0",
+    "eslint": "^7.7.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.0",
+    "husky": "^4.2.5",
+    "prettier": "^2.0.5",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "rimraf": "^3.0.2",
@@ -26,7 +34,6 @@
     "styled-components": "^5.1.1"
   },
   "scripts": {
-    "start": "cd docs && yarn start",
     "build-babel": "babel src",
     "build-umd": "rollup -c",
     "build-babel-esm": "builder run build-babel -- -d es",
@@ -34,6 +41,10 @@
     "build": "builder concurrent --buffer build-babel-esm build-babel-cjs build-umd",
     "clean": "rimraf dist lib es \"docs/dist\"",
     "dev": "rollup -c -w",
+    "lint": "eslint '*.js' src 'docs/*.js' docs/src",
+    "prettier": "prettier \"**/*.{js,jsx,json,ts,css,md}\"",
+    "prettier-check": "yarn prettier --check",
+    "prettier-fix": "yarn prettier --write",
     "version": "yarn clean && yarn build"
   },
   "dependencies": {
@@ -41,5 +52,10 @@
     "prism-react-renderer": "^1.1.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-live": "^2.2.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn prettier-fix && yarn lint"
+    }
   }
 }
