Switch back to double quotes to reduce noise from prettier

--- a/.eslintrc
+++ b/.eslintrc
@@ -31,7 +31,7 @@
     "prettier/prettier": ["error"],
     "quotes": [
       "error",
-      "single",
+      "double",
       {
         "allowTemplateLiterals": true
       }
