--- a/docs/package.json
+++ b/docs/package.json
@@ -7,11 +7,7 @@
     "start": "react-static start",
     "clean": "rimraf dist",
     "build": "react-static build",
-    "prettier-all": "npx prettier --write '{src,static.config,scripts}/**/*.{js,jsx}'",
-    "preversion": "yarn run lint && yarn run build",
-    "format": "yarn run lint --fix",
-    "lint": "eslint 'src/**/*.js' 'static.config.js'",
-    "check-ci": "yarn run lint"
+    "preversion": "yarn build"
   },
   "dependencies": {
     "@mdx-js/react": "^1.6.1",
@@ -32,16 +28,8 @@
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
     "chalk": "^4.1.0",
-    "eslint": "^6.7.2",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.4",
     "execa": "^4.0.1",
-    "formideploy": "^0.3.2",
-    "prettier": "^1.15.1",
     "prism-react-renderer": "^1.1.1",
     "react-hot-loader": "^4.12.21",
     "rimraf": "^3.0.2"
