Update cjs targets to match defaults

--- a/.babelrc
+++ b/.babelrc
@@ -13,7 +13,17 @@
   ],
   "env": {
     "cjs": {
-      "presets": ["@babel/preset-env", "@babel/preset-react"]
+      "presets": [
+        [
+          "@babel/preset-env",
+          {
+            "targets": {
+              "browsers": ["last 2 versions", "safari >= 7"]
+            }
+          }
+        ],
+        "@babel/preset-react"
+      ]
     }
   }
 }
