--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "version": "0.0.1",
   "main": "lib/index.js",
   "module": "es/index.js",
-  "browser": "dist/formidable-oss-landers.umd.js",
   "peerDependencies": {
     "react": ">=16.8.0",
     "styled-components": ">=5.1.0"
@@ -14,9 +13,6 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.10.4",
-    "@rollup/plugin-babel": "^5.2.0",
-    "@rollup/plugin-commonjs": "^15.0.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
     "babel-eslint": "^10.1.0",
     "builder": "^5.0.0",
     "eslint": "^7.7.0",
@@ -29,19 +25,16 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "rimraf": "^3.0.2",
-    "rollup": "^1.0.0",
-    "rollup-plugin-react-svg": "^3.0.3",
     "styled-components": "^5.1.1"
   },
   "scripts": {
     "build-babel": "babel src",
-    "build-umd": "rollup -c",
     "build-babel-esm": "builder run build-babel -- -d es",
     "build-babel-cjs": "builder run --env \"{\\\"BABEL_ENV\\\":\\\"cjs\\\"}\" build-babel -- -d lib",
-    "build": "builder concurrent --buffer build-babel-esm build-babel-cjs build-umd",
+    "build": "builder concurrent --buffer build-babel-esm build-babel-cjs",
     "clean": "rimraf dist lib es \"docs/dist\"",
-    "dev": "rollup -c -w",
-    "lint": "eslint '*.js' src 'docs/*.js' docs/src",
+    "dev": "yarn build-babel-esm -- --watch",
+    "lint": "eslint 'src/**/*.js' src 'docs/**/*.js' docs/src",
     "prettier": "prettier \"**/*.{js,jsx,json,ts,css,md}\"",
     "prettier-check": "yarn prettier --check",
     "prettier-fix": "yarn prettier --write",
