--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.10.4",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-inline-react-svg": "^1.1.1",
     "builder": "^5.0.0",
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
