--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "build-babel-cjs": "builder run --env \"{\\\"BABEL_ENV\\\":\\\"cjs\\\"}\" build-babel -- -d lib",
     "build": "builder concurrent --buffer build-babel-esm build-babel-cjs",
     "clean": "rimraf dist lib es \"docs/dist\"",
-    "dev": "yarn build-babel-esm -- --watch",
+    "dev": "yarn build-babel-esm --watch",
     "lint": "eslint \"**/*.{js,jsx}\"",
     "prettier": "prettier \"**/*.{js,jsx,json,ts,css,md}\"",
     "prettier-check": "yarn prettier --check",
