--- a/example/package.json
+++ b/example/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.0",
     "directory-tree": "^2.2.4",
     "lodash": "^4.17.20",
+    "marksy": "^8.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-static": "^7.2.0",
