--- a/helpers-demo/package.json
+++ b/helpers-demo/package.json
@@ -14,10 +14,11 @@
     "marksy": "^8.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-static": "^7.2.0",
-    "react-static-plugin-reach-router": "^7.2.0",
-    "react-static-plugin-sitemap": "^7.2.0",
-    "react-static-plugin-source-filesystem": "^7.2.0"
+    "react-static": "^7.4.2",
+    "react-static-plugin-reach-router": "^7.4.2",
+    "react-static-plugin-sitemap": "^7.4.2",
+    "react-static-plugin-source-filesystem": "^7.4.2",
+    "slugify": "^1.4.5"
   },
   "devDependencies": {
     "serve": "^11.1.0"
