--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "prism-react-renderer": "^1.1.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-live": "^2.2.2",
+    "react-markdown": "^5.0.3",
     "react-scroll": "^1.8.1",
     "slugify": "^1.4.5",
     "yaml-front-matter": "^4.1.0"
